@@ -30,6 +30,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'dev.akkinoc.spring.boot:logback-access-spring-boot-starter:3.2.2'
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
+    implementation 'com.google.googlejavaformat:google-java-format:1.14.0'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
@@ -42,6 +43,9 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+exportArgs = ['--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+]
 
 jar {
     enabled = false
